--- a/Day 48/bus-service/package.json
+++ b/Day 48/bus-service/package.json
@@ -8,9 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-vue": "^0.5.1",
+    "@primevue/themes": "^4.2.4",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "element-plus": "^2.9.0",
     "jwt-decode": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.2.4",
     "tailwindcss": "^3.4.15",
     "vue": "^3.2.13",
     "vue-router": "^4.4.5"
@@ -22,7 +28,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.81.0"
   },
   "eslintConfig": {
     "root": true,
