--- a/Day 48/bus-service/package.json
+++ b/Day 48/bus-service/package.json
@@ -9,16 +9,13 @@
   },
   "dependencies": {
     "@lottiefiles/dotlottie-vue": "^0.5.1",
-    "@primevue/themes": "^4.2.4",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
-    "element-plus": "^2.9.0",
     "jwt-decode": "^4.0.0",
-    "primeicons": "^7.0.0",
-    "primevue": "^4.2.4",
     "tailwindcss": "^3.4.15",
-    "vue": "^3.2.13",
+    "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
@@ -29,7 +26,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "sass": "^1.81.0"
+    "sass": "^1.81.0",
+    "sass-loader": "^16.0.3"
   },
   "eslintConfig": {
     "root": true,
