--- a/Assessment2/flight-booking/package.json
+++ b/Assessment2/flight-booking/package.json
@@ -11,6 +11,8 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "pinia": "^2.3.0",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "router": "^1.3.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
